PR1: v4-compliant scaffold + DB + JWT auth (replaces initial scaffold)
Replaces the initial scaffold with one that strictly follows the v4 spec
(no Double for money, optimistic locking, OSIV off, etc.).

Highlights:
- Spring Boot 3.3.4 / Java 21, single Maven module
- Entities: User, Category, Product (BigDecimal price, @Version, draft,
  sold_count, image_vector via DoubleArrayUserType), Cart, CartItem,
  Order (@Version + lifecycle), OrderItem (snapshot productName/url/price)
- Flyway: V1 schema, V2 Java seed (deterministic BCrypt at migration time
  for admin@demo.com / shopper@demo.com), V3 indexes
- Auth: jjwt 0.12.6 HS256, fail-fast on <32-byte secret;
  /api/auth/register, /api/auth/login; /api/users/me, password change
- SecurityConfig with role-based @hasRole rules + CORS + stateless JWT;
  unauthenticated/forbidden requests return JSON ApiError (not Spring HTML)
- GlobalExceptionHandler maps NotFound->404, EmailExists->409,
  Business->400/409 by content, OptimisticLock->409, Validation->400,
  BadCredentials->401, AccessDenied->403, fallback->500
- WebMvcConfig serves uploads at /files/** with normalized paths
- application.yml: ddl-auto=validate, open-in-view=false, multipart 5MB,
  bigDecimal-as-plain JSON, dev profile + Testcontainers test profile
- JwtServiceTest covers generate / validate / tampered / expired / short
- README with setup, Vertex switch, troubleshooting
- CI workflow: backend mvn verify + frontend job (no-op until PR4)
- BcryptHasherCli helper

Co-Authored-By: ahmed wahdan <ahmed646kamel646@gmail.com>